@@ -1,3 +1,10 @@
+2006-05-14  David N. Welton  <davidw@dedasys.com>
+
+	* rivet/packages/session/, rivet/packages/dio/: Added Mysql and
+	Oracle session creation packages.  Updates to dio and session
+	packages.  Modifications to the Mysql driver.  Added an Oracle
+	driver. Thanks to Arnulf Wiedemann (arnulf@wiedemann-pri.de) and
+	Massimo Manghi (manghi@biol.unipr.it).
 
 2006-02-03  Karl Lehenbauer  <karl-rivet@sc.com>
 	* rivet/packages/dio/[dio,diodisplay].tcl: Uncovered a serious flaw
